; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_block_const_kind.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_block_const_kind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @block_const_kind(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_8__, align 8
  %3 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %2, i32 0, i32 0
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %4 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %2, i32 0, i32 0
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %6 = call i32 @block_is_const(%struct.TYPE_7__* %5)
  %7 = call i32 @assert(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %2, i32 0, i32 0
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @jv_get_kind(i32 %12)
  ret i32 %13
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @block_is_const(%struct.TYPE_7__*) #1

declare dso_local i32 @jv_get_kind(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
